[gd_scene load_steps=2 format=3 uid="uid://b4cvu5kkt26wp"]

[ext_resource type="Script" path="res://Assets/Inventory/Scripts/inv_slot.gd" id="1_8yd57"]

[node name="InvSlot" type="ColorRect"]
custom_minimum_size = Vector2(50, 50)
offset_left = -1.0
offset_right = 54.0
offset_bottom = 50.0
focus_mode = 2
color = Color(1, 0.466667, 0.443137, 1)
script = ExtResource("1_8yd57")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 52.0
offset_bottom = 47.0
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="Quantity" type="Label" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "99"
horizontal_alignment = 2

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = -16.0
offset_top = -16.0
offset_right = 71.0
offset_bottom = -2.0
theme_override_font_sizes/font_size = 10
text = "Item Name"
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="gui_input" from="ColorRect/Icon" to="." method="_on_icon_gui_input"]
[connection signal="mouse_entered" from="ColorRect/Icon" to="." method="_on_icon_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Icon" to="." method="_on_icon_mouse_exited"]
